force-app/main/default/objects/RegulatoryAuthorizationType/fields/nepa_default_lead_agency__c.field-meta.xml
<CustomField>
    <fullName>nepa_default_lead_agency__c</fullName>
    <description>Short agency abbreviation used as the default nepa_lead_agency__c value when NEPA_Permit_Record_Creator creates a permit instance from this type (e.g., USACE, EPA, USFWS, FERC, BLM, NPS). Complements IssuingDepartmentId (RegulatoryAuthority lookup) with a display-ready text label.</description>
    <inlineHelpText>Default issuing agency abbreviation for permits of this type (e.g., USACE, EPA, USFWS). Used when creating permit instance records.</inlineHelpText>
    <label>Default Lead Agency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>