force-app/main/default/objects/RegulatoryAuthorizationType/fields/nepa_gis_trigger_layer__c.field-meta.xml
<CustomField>
    <fullName>nepa_gis_trigger_layer__c</fullName>
    <description>Semicolon-delimited list of NEPA_GIS_Layer__mdt DeveloperName keys whose positive intersection triggers creation of a permit instance of this type. Evaluated by NEPA_Permit_Record_Creator GIS bridge (e.g., NWI_WETLANDS triggers CWA Section 404; EPA_TRIBAL_LANDS triggers NHPA Section 106). Multiple keys mean ANY match triggers the permit.</description>
    <inlineHelpText>GIS layer keys that trigger this permit type (e.g., NWI_WETLANDS; WILD_SCENIC_RIVERS). Any positive match creates a permit instance record.</inlineHelpText>
    <label>GIS Trigger Layer Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>