force-app/main/default/objects/RegulatoryAuthorizationType/fields/nepa_is_critical_path__c.field-meta.xml
<CustomField>
    <fullName>nepa_is_critical_path__c</fullName>
    <description>Default critical-path designation for this permit type. When NEPA_Permit_Record_Creator creates a nepa_required_permit__c instance from this type, it copies this value to nepa_required_permit__c.nepa_is_critical_path__c. Critical-path permits block ROD/FONSI advancement and drive the permit gap risk penalty.</description>
    <inlineHelpText>When checked, permits of this type are critical-path by default — their absence blocks ROD/FONSI and increases litigation risk score.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Default Critical Path</label>
    <type>Checkbox</type>
</CustomField>