force-app/main/default/objects/RegulatoryAuthorizationType/fields/nepa_statutory_deadline_days__c.field-meta.xml
<CustomField>
    <fullName>nepa_statutory_deadline_days__c</fullName>
    <description>Number of days from NEPA process start to the statutory or typical regulatory deadline for permits of this type. Copied to nepa_required_permit__c.nepa_statutory_deadline_days__c at record creation for SLA calculation. Values sourced from CEQ/NEPA guidance and agency processing time baselines.</description>
    <inlineHelpText>Statutory or typical processing days for this permit type. Used to calculate the SLA due date when a permit instance record is created.</inlineHelpText>
    <label>Statutory Deadline (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>